fix(style): adjust spacing for elements on mobile

--- a/public/_assets/css/_base.scss
+++ b/public/_assets/css/_base.scss
@@ -251,7 +251,9 @@ abbr {
     row-gap: 1rem;
 
     &_horizontal {
-        flex-direction: row;
-        row-gap: 1rem;
+        @include large-frame() {
+            flex-direction: row;
+            column-gap: 1rem;
+        }
     }
 }
