--- a/public/_assets/css/_components.scss
+++ b/public/_assets/css/_components.scss
@@ -78,6 +78,8 @@
     line-height: 1rem;
 
     user-select: none;
+
+    color: var(--color-base);
 }
 
 .section {
