--- a/public/_assets/css/_layouts.scss
+++ b/public/_assets/css/_layouts.scss
@@ -15,8 +15,6 @@
 
         &_guestbook {
             border: none;
-
-            // overflow-y: hidden;
         }
     }
 
@@ -40,7 +38,10 @@
 
         &__navi {
             border-top: 1px solid var(--color-base);
-            padding: 1rem 0;
+
+            &_blog {
+                padding-top: 1rem;
+            }
         }
 
         &__main {
