--- a/public/_assets/css/main.css
+++ b/public/_assets/css/main.css
@@ -159,9 +159,11 @@ abbr {
   flex-direction: column;
   row-gap: 1rem;
 }
-.l-stack_horizontal {
-  flex-direction: row;
-  row-gap: 1rem;
+@media (min-width: 600px) and (min-height: 460px) {
+  .l-stack_horizontal {
+    flex-direction: row;
+    column-gap: 1rem;
+  }
 }
 
 /*:._.:*~  LAYOUTS  ~*:._.:*/
@@ -200,7 +202,9 @@ abbr {
   }
   .page__navi {
     border-top: 1px solid var(--color-base);
-    padding: 1rem 0;
+  }
+  .page__navi_blog {
+    padding-top: 1rem;
   }
   .page__main {
     border-top: 1px dashed var(--color-base);
@@ -563,6 +567,7 @@ abbr {
   font-family: var(--font-family-mono);
   line-height: 1rem;
   user-select: none;
+  color: var(--color-base);
 }
 
 .section {
